# fwupd_forcepad

./: meson.build
focalfp/: README.md  focalfp.quirk  fu-focalfp-common.h  fu-focalfp-firmware.c  fu-focalfp-firmware.h  fu-focalfp-hid-device.c  fu-focalfp-hid-device.h  fu-plugin-focalfp.c  fu-self-test.c  meson.build
